# gimp-cuda-plugin

./: AUTHORS  CMakeLists.txt  INSTALL  Makefile  README  defines_cpu.hpp  defines_gpu.hpp  gimp_gui.cpp  gimp_gui.hpp  gimp_main.cpp  gimp_main.hpp  multi_res_cpu.cpp  multi_res_cpu.hpp  multi_res_device.cu  multi_res_host.cu  multi_res_host.hpp
doc/: decompose.eps  mrfilt.eps  reconstruct.eps
